GUI improvements for IRC account registration wizard.